Correccion de errores

--- a/Ejercicios practica/currrículumprueba.HTML
+++ b/Ejercicios practica/currrículumprueba.HTML
@@ -6,23 +6,24 @@
     <title>Currículum - Luis Mestre</title>
 </head>
 
-<body>
+<body bgcolor="#ff0000">
     <h1 style="text-align: center;">
         Currículum Vitae
     </h1>
 
 
-    <h2 style="text-align: left;"><U>Sobre mí</U></h2>
-    <p>Mi nombre es Luis Mestre, tengo 30 años y soy de Valencia. Soy una persona responsable, organizada y con muchas
+    <h2 style="text-align: right;"><U>Sobre mí</U></h2>
+    <p style="text-align: right;">Mi nombre es Luis Mestre, tengo 21 años y soy de Huelva. Soy una persona responsable,
+        organizada y con muchas
         ganas de aprender. Me gusta trabajar en equipo y afrontar nuevos retos.</p>
 
 
-    <h2 style="text-align: right;"><U>Datos Personales</U></h2>
+    <h2 style="text-align: left;"><U>Datos Personales</U></h2>
     <dl>
         <dt><b>Nombre:</b></dt>
         <dd>Luis Mestre</dd>
         <dt><b>Edad:</b>
-        <dd>30</dd>
+        <dd>21</dd>
         <dt><b>Direccion:</b></dt>
         <dd>C/Flor Nº17</dd>
 
